# DB_SQL_NOSQL_script_recipes

./: .gitignore  README.md
BashScripts/: cleanPorts.sh
BashScripts/MongoDB/: README.MD  README.md  docker-compose.yml
BashScripts/MySQL/: README.md
CRONJOBS/MySQL/: README.md
CronJobs/MySQL/: cronjob.sql
Cursors/MySQL/: Cursors_example.sql
Docker/Cassandra/: README.MD  docker-compose.yml
Docker/DB2/: README.md  docker-compose.yml
Docker/DynamoDb/: Dockerfile_aws_cli  docker-compose.yml
Docker/H2/: README.md  docker-compose.yml
Docker/InfluxDB/: README.MD  docker-compose.yml
Docker/MSSql/: README.MD  connectToDB.sh  docker-compose.yml
Docker/MongoDB/: README.md  docker-compose.yml
Docker/MySQL/: connectToDB.sh  docker-compose.yml
Docker/Neo4J/: README.MD  docker-compose.yml
Docker/Oracle/: Dockerfile  README.md  connectToDB.sh  docker-compose.yml
Docker/PostgreSQL/: README.md  connectToDB.sh  docker-compose.yml
Docker/Redis/: README.MD  docker-compose.yml
Docker/SQLite/: docker-compose.yml
Functions/MySQL/: functions.sql
Joins/MySQL/: README.md
Partitions/MySQL/: partitions_code_snippets.sql  pupils.sql  work_with_partitions.sql
Playground/H2_RCE_exploit/: README.md
Playground/MySQL/: requests.sql  storedProcedures.sql
Playground/MySQL_RCE_Module/: .gitignore  Dockerfile  README.MD  copySharedLibToContainer.sh
Playground/MySQL_email_sending/: .gitignore  README.MD
Playground/MySQL_file_operations/: README.MD  clean.sh  copySharedLibToContainer.sh  (+2 more)
Playground/MySQL_file_operations/FileManager/: CMakeLists.txt  main.c
(+160 files in other folders)
